Modificada la página de error "página no encontrada" para añadir un botón para acceder al listado de plugins, y reconstruir.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -19,7 +19,7 @@
     "account-dot-code": "Punkt um mit Nulle automatisch aufzufüllen. Beispiel 11.1 = 1100000001",
     "account-length": "Kontolänge",
     "account-length-error": "Längenfehler Subkonto. Das Konto %code% muss die vorgeschriebene Länge haben.",
-    "account-missing-in-balance": "La cuenta %codcuenta% tiene saldo pero no está incluida en los balances. Considere incluirla si el balance sale descuadrado.",
+    "account-missing-in-balance": "Das Konto %codaccount% hat einen Saldo, ist aber nicht in den Bilanzen enthalten. Erwägen Sie, es einzubeziehen, wenn die Bilanz unausgeglichen ist.",
     "account-parent-error": "Hauptkonto falsch oder gehört nicht zum Geschäftsjahr",
     "accounting": "Buchhaltung",
     "accounting-accounts": "Buchhaltungskonto",
@@ -44,7 +44,7 @@
     "accounting-reports": "Buchhaltungsberichte",
     "accounting-within-regularization": "In diesem Zeitraum gibt es bereits eine steuerliche Regularisierung. Es können keine Änderungen vorgenommen werden.",
     "accounts": "Konten",
-    "accrual-date": "Fecha devengo",
+    "accrual-date": "Abgrenzungsdatum",
     "action": "Aktion",
     "actions": "Aktionen",
     "active": "Aktiv",
