--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -2,47 +2,47 @@
     "abbreviated": "abbreviazione",
     "about": "Di",
     "accept": "accettare",
-    "accept-all": "Aceptar todo",
+    "accept-all": "Tutto accettato",
     "accept-data": "Accetta modifiche o operazioni",
     "accept-privacy-policy": "Accetta le condizioni di privacy",
-    "accepted": "Aceptado",
-    "accepts-emails-commas": "accepts-emails-commas",
-    "access-denied": "access-denied",
-    "access-denied-p": "Usted no tiene permiso para ver estos datos. Si cree que si que debería tener permiso para ver estos datos, contacte con su administrador para que le conceda permiso.",
+    "accepted": "Accattato",
+    "accepts-emails-commas": "accettare-email-virgole",
+    "access-denied": "Accesso negato",
+    "access-denied-p": "Non hai il permesso per visualizzare questi dati. Se ritieni di dover avere l'autorizzazione per visualizzare questi dati, contatta il tuo amministratore per ottenere l'autorizzazione.",
     "account": "account",
-    "account-bad-parent": "La cuenta %codcuenta% tiene asociada una cuanta padre equivocada.",
+    "account-bad-parent": "Al conto % al codice conto % è associato l'account sembra sbagliato.",
     "account-balance": "Saldo del conto",
     "account-code": "Codice dell'account",
-    "account-code-bigger-than-subaccounts": "El código de la cuenta %code% es más largo que las subcuentas",
-    "account-code-lower-than-parent": "account-code-lower-than-parent",
+    "account-code-bigger-than-subaccounts": "Codice account % codice % è più lungo degli account secondari",
+    "account-code-lower-than-parent": "codice-account-inferiore-a-principale",
     "account-data-missing": "Dati mancanti nell'account",
-    "account-dot-code": "account-dot-code",
+    "account-dot-code": "codice-punto-account",
     "account-length": "Lunghezza dell'account",
-    "account-length-error": "account-length-error",
-    "account-missing-in-balance": "La cuenta %codcuenta% tiene saldo pero no está incluida en los balances. Considere incluirla si el balance sale descuadrado.",
+    "account-length-error": "errore-lunghezza-account",
+    "account-missing-in-balance": "Il conto % co-conto % ha un saldo ma non è compreso nei saldi. Valuta di includerlo se il saldo è sbilanciato.",
     "account-parent-error": "L'account principale non è corretto o non appartiene all'esercizio",
     "accounting": "Contabilità",
     "accounting-accounts": "Contabilità",
-    "accounting-balance": "accounting-balance",
-    "accounting-balances": "accounting-balances",
+    "accounting-balance": "saldo contabile",
+    "accounting-balances": "saldi-contabili",
     "accounting-concept": "Concetto di contabilità",
-    "accounting-data-missing": "accounting-data-missing",
+    "accounting-data-missing": "dati contabili mancanti",
     "accounting-date": "Data di contabilità",
     "accounting-entries": "Scritture contabili",
     "accounting-entry": "Voce contabile",
     "accounting-entry-date": "Data di iscrizione alla contabilità",
-    "accounting-entry-macros-text": "<p>You can use special keywords (macros) to autocomplete some information on the description field:<\/p><dl><dt>Document name<\/dt><dd>Type <strong>%document%<\/strong> to add the document's name.<\/dd><dt>Current date<\/dt><dd>Type <strong>%date%<\/strong> to add the current date.<\/dd><dt>Entry date<\/dt><dd>Type <strong>%date-entry%<\/strong> to add the accounting entry's date.<\/dd><dt>Month<\/dt><dd>Type <strong>%month%<\/strong> to add the name of the month of the accounting entry's date.<\/dd><\/dl>",
-    "accounting-entry-macros-title": "Usage of macros in the description field",
-    "accounting-exercise-not-found": "accounting-exercise-not-found",
-    "accounting-file": "Accounting file",
+    "accounting-entry-macros-text": "<p>Puoi utilizzare parole chiave speciali (macro) per completare automaticamente alcune informazioni nel campo della descrizione:<\/p><dl><dt>Nome documento<\/dt><dd>Digita <strong>%document%<\/strong> per aggiungere il nome del documento.<\/dd><dt>Data corrente<\/dt><dd>Digita <strong>%date%<\/strong> per aggiungere la data corrente.<\/dd><dt>Data di entrata<\/ dt><dd>Digitare <strong>%date-entry%<\/strong> per aggiungere la data della registrazione contabile.<\/dd><dt>Mese<\/dt><dd>Digitare <strong>%month%<\/strong > aggiungere il nome del mese della data della registrazione contabile.<\/dd><\/dl>",
+    "accounting-entry-macros-title": "Utilizzo delle macro nel campo della descrizione",
+    "accounting-exercise-not-found": "esercizio-contabile-non-trovato",
+    "accounting-file": "Fascicolo contabile",
     "accounting-heading": "Intestazione contabile",
     "accounting-heading-code": "Titolo ID Accounting",
     "accounting-items": "Articoli contabili",
-    "accounting-lines-error": "accounting-lines-error",
-    "accounting-plan": "accounting-plan",
-    "accounting-possible-duplicated": "Accounting entry possible duplicated of this other. If there isn't, to avoid this message, simply change the concept.",
+    "accounting-lines-error": "errore-righe-contabili",
+    "accounting-plan": "piano contabile",
+    "accounting-possible-duplicated": "Eventuale registrazione contabile duplicata di quest'altra. Se non c'è, per evitare questo messaggio, cambia semplicemente il concetto.",
     "accounting-reports": "Rapporti contabili",
-    "accounting-within-regularization": "The accounting entry is within a regularization of %tax%. It can't be deleted.",
+    "accounting-within-regularization": "La registrazione contabile rientra in una regolarizzazione del % IVA %. Non può essere eliminato.",
     "accounts": "conti",
     "accrual-date": "Fecha devengo",
     "action": "Azione",
