--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1005,6 +1005,7 @@
     "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "%email% não é um email válido",
     "not-valid-fiscal-number": "not-valid-fiscal-number",
+    "not-valid-image": "No es una imagen válida",
     "not-valid-percentage-retention": "Not valid percentage retention",
     "note": "Nota",
     "notes": "Notas",
