Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -311,6 +311,7 @@
     "core-update": "Actualització del nucli a la versió %version%",
     "core-update-warning": "Advertiments d'actualització",
     "correct": "Correcte",
+    "cost": "Cost",
     "cost-price": "Preu de cost",
     "cost-price-policy": "Política de preu de cost",
     "counterpart": "Contrapartida",
@@ -1005,7 +1006,7 @@
     "not-stored-content": "Contingut no emmagatzemat",
     "not-valid-email": "E-mail %email% no vàlid",
     "not-valid-fiscal-number": "El %type% %number% no és vàlid",
-    "not-valid-image": "No es una imagen válida",
+    "not-valid-image": "No és una imatge vàlida",
     "not-valid-percentage-retention": "Percentatge no vàlid. Ha de ser major de 0.00",
     "note": "Nota",
     "notes": "Notes",
@@ -1252,6 +1253,7 @@
     "report-taxes-p": "Aquest informe permet obtenir el desglossament d'impostos de les factures de compra o de venda del rang seleccionat",
     "reports": "Informes",
     "request-sent": "Petició enviada",
+    "required": "Obligatori",
     "requires-core": "Requereix FacturaScripts %version%",
     "reserved": "Reservat",
     "reset": "La configuració s'ha reiniciat correctament.",
