--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -53,7 +53,7 @@
     "add-all-disabled": "Alle deaktivierten hinzufügen",
     "add-all-enabled": "Alles hinzufügen aktiviert",
     "add-extra-lines": "zusätzliche Zeilen hinzufügen",
-    "add-file": "Añadir archivo",
+    "add-file": "Datei hinzufügen",
     "add-invoices": "Rechnungen hinzufügen",
     "add-new-plugin": "Neues Plugin hinzufügen",
     "additional-text": "Zusatztext",
@@ -311,6 +311,7 @@
     "core-update": "Kernel-Update auf Version %version%",
     "core-update-warning": "Advertencias de actualización",
     "correct": "Correcto",
+    "cost": "Coste",
     "cost-price": "Kostenpreis",
     "cost-price-policy": "Kosten Preispolitik",
     "counterpart": "Gegenstück",
@@ -1252,6 +1253,7 @@
     "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
     "reports": "Berichte",
     "request-sent": "Antrag geschickt",
+    "required": "erforderlich",
     "requires-core": "Requiere FacturaScripts %version%",
     "reserved": "Reserviert",
     "reset": "Einstellungen erfolgreich zurückgesetzt, drücken Sie <a href=\" %1$s#avanzado\">hier<\/a> um fortzusetzen.",
