--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -311,6 +311,7 @@
     "core-update": "Core update to version %version%",
     "core-update-warning": "Update warnings",
     "correct": "Correct",
+    "cost": "Cost",
     "cost-price": "Cost price",
     "cost-price-policy": "Cost price policy",
     "counterpart": "Counterpart",
@@ -1005,7 +1006,7 @@
     "not-stored-content": "Content not stored",
     "not-valid-email": "Invalid email %email%",
     "not-valid-fiscal-number": "The %type% %number% is not valid",
-    "not-valid-image": "No es una imagen válida",
+    "not-valid-image": "It is not a valid image",
     "not-valid-percentage-retention": "Not valid percentage retention",
     "note": "Note",
     "notes": "Notes",
@@ -1252,6 +1253,7 @@
     "report-taxes-p": "This report allows you to obtain the tax breakdown from purchase or sale invoices in the selected range",
     "reports": "Reports",
     "request-sent": "Request sent",
+    "required": "Required",
     "requires-core": "FacturaScripts %version% required",
     "reserved": "Reserved",
     "reset": "Reset",
