--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -311,6 +311,7 @@
     "core-update": "Actualización del núcleo a la versión %version%",
     "core-update-warning": "Advertencias de actualización",
     "correct": "Correcto",
+    "cost": "Coste",
     "cost-price": "precio de costo",
     "cost-price-policy": "Política de precio de coste",
     "counterpart": "Contrapartida",
@@ -1252,6 +1253,7 @@
     "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
     "reports": "Informes",
     "request-sent": "Petición enviada",
+    "required": "Obligatorio",
     "requires-core": "Requiere FacturaScripts %version%",
     "reserved": "Reservado",
     "reset": "Configuración reiniciada correctamente.",
