--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -311,6 +311,7 @@
     "core-update": "%version%. bertsiora muinaren eguneraketa",
     "core-update-warning": "Eguneraketa oharrak",
     "correct": "Zuzena",
+    "cost": "Coste",
     "cost-price": "Kostu prezioa",
     "cost-price-policy": "Kostuen prezio politika",
     "counterpart": "Kontrakontua",
@@ -1252,6 +1253,7 @@
     "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
     "reports": "Txostenak",
     "request-sent": "Eskaria bidalita",
+    "required": "Derrigorrezkoa",
     "requires-core": "FacturaScripts %version% behar du",
     "reserved": "Gordeta",
     "reset": "Berrezarri",
