--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -311,6 +311,7 @@
     "core-update": "Mise à jour du noyau vers la version %version%",
     "core-update-warning": "Advertencias de actualización",
     "correct": "Correcto",
+    "cost": "Coste",
     "cost-price": "Prix de revient",
     "cost-price-policy": "Politique de prix de revient",
     "counterpart": "Compensation",
@@ -1252,6 +1253,7 @@
     "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
     "reports": "Rapports",
     "request-sent": "Requête envoyée",
+    "required": "Requis",
     "requires-core": "Requiere FacturaScripts %version%",
     "reserved": "Réservé",
     "reset": "Réinitialiser les paramètres",
