--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -311,6 +311,7 @@
     "core-update": "Actualización do núcleo á versión %version%",
     "core-update-warning": "Avisos de actualización",
     "correct": "Correcto",
+    "cost": "Custo",
     "cost-price": "Prezo de custo",
     "cost-price-policy": "Política de actualización de prezos de custo",
     "counterpart": "Contrapartida",
@@ -1252,6 +1253,7 @@
     "report-taxes-p": "Este informe permite obter a desagregación de impostos das facturas de compra ou de venda do rango seleccionado",
     "reports": "Informes",
     "request-sent": "Petición enviada",
+    "required": "Obrigatorio",
     "requires-core": "Precisa de FacturaScripts %version%",
     "reserved": "Reservado",
     "reset": "Configuración reiniciada correctamente.",
