--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -311,6 +311,7 @@
     "core-update": "Aggiornamento alla versione %version%",
     "core-update-warning": "Advertencias de actualización",
     "correct": "Correcto",
+    "cost": "Coste",
     "cost-price": "Prezzo di costo",
     "cost-price-policy": "cost-price-policy",
     "counterpart": "Offsetting",
@@ -1252,6 +1253,7 @@
     "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
     "reports": "Rapporti",
     "request-sent": "request-sent",
+    "required": "required",
     "requires-core": "Requiere FacturaScripts %version%",
     "reserved": "Riservato",
     "reset": "Ripristina correttamente le impostazioni, premere <a href=\" %1$s#avanzado\">qui<\/a> per continuare.",
