--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -311,6 +311,7 @@
     "core-update": "core-update",
     "core-update-warning": "Advertencias de actualización",
     "correct": "Correcto",
+    "cost": "Coste",
     "cost-price": "Preço de custo",
     "cost-price-policy": "cost-price-policy",
     "counterpart": "Offsetting",
@@ -1252,6 +1253,7 @@
     "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
     "reports": "Relatórios",
     "request-sent": "request-sent",
+    "required": "required",
     "requires-core": "Requiere FacturaScripts %version%",
     "reserved": "Reserved",
     "reset": "O programa de configuração foi reiniciado com êxito, pressione <a href='0#advanced'> aqui <\/a> para continuar.",
