--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -311,6 +311,7 @@
     "core-update": "Actualització del nucli a la versió %version%",
     "core-update-warning": "Advertencias de actualización",
     "correct": "Correcto",
+    "cost": "Coste",
     "cost-price": "Preu de cost",
     "cost-price-policy": "Política de preu de cost",
     "counterpart": "Contrapartida",
@@ -1252,6 +1253,7 @@
     "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
     "reports": "Informes",
     "request-sent": "Petició enviada",
+    "required": "required",
     "requires-core": "Requiere FacturaScripts %version%",
     "reserved": "Reservat",
     "reset": "La configuració s'ha reiniciat correctament.",
