filtrar lineas totalmente servidas

--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -635,6 +635,7 @@
     "from-subaccount": "Desde subcuenta",
     "full-access": "Acceso completo",
     "full-path": "Ruta completa",
+    "fully-served-lines": "Lineas totalmente servidas",
     "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
     "general": "General",
     "general-concepts": "Conceptos generales",
