--- a/Core/Translation/es_CO.json
+++ b/Core/Translation/es_CO.json
@@ -729,7 +729,7 @@
     "in-stock": "En stock",
     "inactive": "Inactivo",
     "income-and-expenses": "Ingresos y Gastos",
-    "incompatible-document": "Documento incompatible: %code%. Distinto cliente, proveedor, divisa o almacén.",
+    "incompatible-document": "Documento incompatible: %code%. Para poder agrupar documentos deben tener el mismo cliente o proveedor, serie, almacén, divisa y descuentos globales.",
     "incompatible-with-facturascripts": "Incompatible con la versión %version% de FacturaScripts",
     "incorrect-accounting-amount": "El subtotal del asiento es incorrecto.",
     "info": "Información",
