--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -485,7 +485,8 @@
     "email-not-configured": "Email no configurado. Puedes configurar el email desde el menú administrador, emals.",
     "email-not-sent": "No enviado.",
     "email-notification": "Notificación por email",
-    "email-notification-not-exists": "Notificación de email %name% no encontrada",
+    "email-notification-disabled": "La notificación de email %name% está desactivada",
+    "email-notification-not-exists": "La notificación de email %name% no existe",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "Las respuestas a este email irán a %email%",
     "email-sent": "Email enviado.",
