--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -485,6 +485,7 @@
     "email-not-configured": "Email no configurat. Podeu configurar l'email des del menú administrador, panell de control, preferències d'aplicació.",
     "email-not-sent": "No enviat",
     "email-notification": "Notificació per email",
+    "email-notification-disabled": "La notificación de email %name% está desactivada",
     "email-notification-not-exists": "Notificació de email %name% no trobada",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "Les respostes a aquest email aniran a %email%",
