--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -485,6 +485,7 @@
     "email-not-configured": "E-Mail nicht konfiguriert. Sie können die E-Mail über das Administratormenü, Systemsteuerung, Anwendungseinstellungen konfigurieren.",
     "email-not-sent": "nicht gesendet",
     "email-notification": "Notificación por email",
+    "email-notification-disabled": "La notificación de email %name% está desactivada",
     "email-notification-not-exists": "Notificación de email %name% no encontrada",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "Die Antworten auf dieses Email gehen an %email%",
