--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -485,6 +485,7 @@
     "email-not-configured": "Les paramètres e-mail ne sont pas configurés. Vous pouvez le faire depuis le menu Administration > Panneau de contrôle > Préférences de l'application",
     "email-not-sent": "Non envoyé",
     "email-notification": "Notificación por email",
+    "email-notification-disabled": "La notificación de email %name% está desactivada",
     "email-notification-not-exists": "Notificación de email %name% no encontrada",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "Les réponses à cet e-mail seront envoyées à %email%",
