--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -485,6 +485,7 @@
     "email-not-configured": "El correu electònic no està configurat",
     "email-not-sent": "No s'ha enviat",
     "email-notification": "Notificación por email",
+    "email-notification-disabled": "La notificación de email %name% está desactivada",
     "email-notification-not-exists": "Notificación de email %name% no encontrada",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "email-replies-to",
