Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -44,19 +44,19 @@
     "accounting-reports": "Rapporti contabili",
     "accounting-within-regularization": "La registrazione contabile rientra in una regolarizzazione del % IVA %. Non può essere eliminato.",
     "accounts": "conti",
-    "accrual-date": "Fecha devengo",
+    "accrual-date": "Data di maturazione",
     "action": "Azione",
     "actions": "azioni",
     "active": "Attivo",
-    "actual-cost-price": "actual-cost-price",
+    "actual-cost-price": "Prezzo di costo effettivo",
     "add": "aggiungere",
-    "add-all-disabled": "Add all disabled",
-    "add-all-enabled": "Add all enabled",
-    "add-extra-lines": "add-extra-lines",
-    "add-file": "Añadir archivo",
+    "add-all-disabled": "Aggiungi tutti disabilitati",
+    "add-all-enabled": "Aggiungi tutti abilitati",
+    "add-extra-lines": "Aggiungere linee extra",
+    "add-file": "Aggiungi file",
     "add-invoices": "Aggiungi fatture",
     "add-new-plugin": "Aggiungi un nuovo plug-in",
-    "additional-text": "additional-text",
+    "additional-text": "Testo aggiuntivo",
     "address": "Indirizzo",
     "addresses": "indirizzi",
     "addresses-and-contacts": "Indirizzi e contatti",
@@ -485,7 +485,7 @@
     "email-not-configured": "email-not-configured",
     "email-not-sent": "Non inviato",
     "email-notification": "Notificación por email",
-    "email-notification-disabled": "La notificación de email %name% está desactivada",
+    "email-notification-disabled": "La notifica email di %name% è disabilitata",
     "email-notification-not-exists": "Notificación de email %name% no encontrada",
     "email-replies": "risposta e-mail",
     "email-replies-to": "email-replies-to",
@@ -1592,26 +1592,26 @@
     "wizard": "wizard",
     "wizard-p": "wizard-p",
     "wizard-plugins": "wizard-plugins",
-    "work-events": "Eventos de trabajo",
-    "working-hours": "Horario de trabajo",
-    "write-a-message-here": "Escribe un mensaje aquí",
-    "x-column": "x-column",
-    "x-operation": "x-operation",
-    "y-column": "y-column",
+    "work-events": "Eventi di lavoro",
+    "working-hours": "Ore lavorative",
+    "write-a-message-here": "Scrivi un messaggio qui",
+    "x-column": "Colonna X",
+    "x-operation": "Operazione X",
+    "y-column": "Colonna Y",
     "year": "Anno",
     "year-wildcard-info": "Current year (from the current date)",
-    "yearly": "Yearly",
+    "yearly": "Annuale",
     "years": "Anni",
     "yes": "se",
     "yesterday": "Ieri",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
-    "you-sent-a-audio": "Enviaste un audio",
-    "you-sent-a-document": "Enviaste un documento",
-    "you-sent-a-location": "Enviaste una ubicación",
-    "you-sent-a-picture": "Enviaste una imagen",
-    "you-sent-a-video": "Enviaste un video",
+    "you-sent-a-audio": "Hai inviato un audio",
+    "you-sent-a-document": "Hai inviato un documento",
+    "you-sent-a-location": "Hai inviato una posizione",
+    "you-sent-a-picture": "Hai inviato un'immagine",
+    "you-sent-a-video": "Hai inviato un video",
     "you-should-change-passwd": "È consigliabile cambiare la password",
-    "your": "your",
+    "your": "Il tuo",
     "zip-code": "Cap",
     "zip-error-wrong-structure": "La struttura del file ZIP è incorretta. Può contenere solamente la cartella del plugin e solamente un plugin."
 }
