Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -319,6 +319,9 @@
     "country": "País",
     "create": "Crear",
     "create-accounting-entry": "Crear Assentament Comptable",
+    "create-delivery-note": "Crear albarà",
+    "create-estimation": "Crear pressupost",
+    "create-invoice": "Crear factura",
     "create-new-record": "Crear un registre nou",
     "created": "Creat",
     "created-default-admin-account": "S'ha creat l'usuari %nick% amb la contrasenya %pass%",
@@ -1162,6 +1165,7 @@
     "printing-formats": "Formats d'impressió",
     "priority": "Prioritat",
     "private": "Privat",
+    "process": "Procés",
     "processing": "En procés",
     "product": "Producte",
     "product-not-found": "Producte %ref% no trobat",
