--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -319,6 +319,9 @@
     "country": "Land",
     "create": "erstellen",
     "create-accounting-entry": "Buchung erstellen",
+    "create-delivery-note": "Crear albarán",
+    "create-estimation": "Crear presupuesto",
+    "create-invoice": "Crear factura",
     "create-new-record": "Neuen Datensatz erstellen",
     "created": "erstellt",
     "created-default-admin-account": "Benutzer <b>nick<\/b>mit Passwort <b>pass<\/b> angelegt.",
@@ -1162,6 +1165,7 @@
     "printing-formats": "Druckformate",
     "priority": "Priorität",
     "private": "Privat",
+    "process": "Proceso",
     "processing": "processing",
     "product": "Produkt",
     "product-not-found": "Producto %ref% no encontrado",
