--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -319,6 +319,9 @@
     "country": "Country",
     "create": "Create",
     "create-accounting-entry": "Create Accounting Entry",
+    "create-delivery-note": "Create delivery note",
+    "create-estimation": "Create budget",
+    "create-invoice": "Create invoice",
     "create-new-record": "Create new record",
     "created": "Created",
     "created-default-admin-account": "The %nick% user was created with the %pass% password.",
@@ -1162,6 +1165,7 @@
     "printing-formats": "Printing formats",
     "priority": "Priority",
     "private": "Private",
+    "process": "Process",
     "processing": "Processing",
     "product": "Product",
     "product-not-found": "Product %ref% not found",
