--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -319,6 +319,9 @@
     "country": "Estatua",
     "create": "Sortu",
     "create-accounting-entry": "Kontabilitate Idazpena Sortu",
+    "create-delivery-note": "Crear albarán",
+    "create-estimation": "Aurrekontua sortu",
+    "create-invoice": "Faktura sortu",
     "create-new-record": "Erregistro berria sortu",
     "created": "Sortua",
     "created-default-admin-account": "%nick% erabiltzailea sortu da %pass% pasahitzarekin",
@@ -1162,6 +1165,7 @@
     "printing-formats": "Inprimatze formatuak",
     "priority": "Lehentasuna",
     "private": "Pribatua",
+    "process": "Prozesua",
     "processing": "Prozesatzen",
     "product": "Produktua",
     "product-not-found": "%ref% produktua ez da aurkitu",
