--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -319,6 +319,9 @@
     "country": "Pays",
     "create": "Créer",
     "create-accounting-entry": "Créer une entrée comptable",
+    "create-delivery-note": "Crear albarán",
+    "create-estimation": "Créer un budget",
+    "create-invoice": "Crear factura",
     "create-new-record": "Créer un nouvel enregistrement",
     "created": "Créé",
     "created-default-admin-account": "L'utilisateur %nick% a été créé avec le mot de passe %pass%.",
@@ -1162,6 +1165,7 @@
     "printing-formats": "Formats d'impression",
     "priority": "Priorité",
     "private": "Privé",
+    "process": "Proceso",
     "processing": "Traitement",
     "product": "Produit",
     "product-not-found": "Le produit %ref% n'a pas été trouvé",
