--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -319,6 +319,9 @@
     "country": "País",
     "create": "Crear",
     "create-accounting-entry": "Crear Asento Contable",
+    "create-delivery-note": "Novo albarán",
+    "create-estimation": "Crear presuposto",
+    "create-invoice": "Crear factura",
     "create-new-record": "Crear novo rexistro",
     "created": "Creado",
     "created-default-admin-account": "Creouse o usuario %nick% co contrasinal %pass%",
@@ -1162,6 +1165,7 @@
     "printing-formats": "Formatos de impresión",
     "priority": "prioridade",
     "private": "Privado",
+    "process": "Proceso",
     "processing": "Procesando",
     "product": "Produto",
     "product-not-found": "Produto %ref% non atopado",
