--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -319,6 +319,9 @@
     "country": "Nazione",
     "create": "create",
     "create-accounting-entry": "Create Accounting Entry",
+    "create-delivery-note": "Crear albarán",
+    "create-estimation": "Crear presupuesto",
+    "create-invoice": "Crear factura",
     "create-new-record": "Crea un nuovo record",
     "created": "Created",
     "created-default-admin-account": "Ha creato utente <b> amministratore <\/ b> con la password <b> amministratore <\/ b>.",
@@ -1162,6 +1165,7 @@
     "printing-formats": "Formati di stampa",
     "priority": "priority",
     "private": "private",
+    "process": "Proceso",
     "processing": "processing",
     "product": "Prodotto",
     "product-not-found": "Producto %ref% no encontrado",
