--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -319,6 +319,9 @@
     "country": "País",
     "create": "Criar",
     "create-accounting-entry": "Create Accounting Entry",
+    "create-delivery-note": "Crear albarán",
+    "create-estimation": "Crear presupuesto",
+    "create-invoice": "Crear factura",
     "create-new-record": "Criar novo registro",
     "created": "Created",
     "created-default-admin-account": "O usuário <b> admin <\/ b> foi criado com a senha <b> admin <\/ b>.",
@@ -1162,6 +1165,7 @@
     "printing-formats": "printing-formats",
     "priority": "Prioridade",
     "private": "Privado",
+    "process": "Proceso",
     "processing": "A processar",
     "product": "produtos",
     "product-not-found": "Producto %ref% no encontrado",
