--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -319,6 +319,9 @@
     "country": "País",
     "create": "Crea",
     "create-accounting-entry": "Crear assentament contable",
+    "create-delivery-note": "Crear albarán",
+    "create-estimation": "Crear pressupost",
+    "create-invoice": "Crear factura",
     "create-new-record": "Crear un nou registre",
     "created": "Creat",
     "created-default-admin-account": "S'ha creat l'usuari %nick% amb la contrasenya %pass%",
@@ -1162,6 +1165,7 @@
     "printing-formats": "Formats d'impressió",
     "priority": "Prioritat",
     "private": "private",
+    "process": "Proceso",
     "processing": "processing",
     "product": "Producte",
     "product-not-found": "Producto %ref% no encontrado",
