--- a/Core/Translation/es_EC.json
+++ b/Core/Translation/es_EC.json
@@ -319,6 +319,9 @@
     "country": "País",
     "create": "Crear",
     "create-accounting-entry": "Crear Asiento Contable",
+    "create-delivery-note": "Crear albarán",
+    "create-estimation": "Crear presupuesto",
+    "create-invoice": "Crear factura",
     "create-new-record": "Crear nuevo registro",
     "created": "Creado",
     "created-default-admin-account": "Se ha creado el usuario %nick% con la contraseña %pass%",
@@ -1162,6 +1165,7 @@
     "printing-formats": "Formatos de impresión",
     "priority": "Prioridad",
     "private": "Privado",
+    "process": "Proceso",
     "processing": "Procesando",
     "product": "Producto",
     "product-not-found": "Producto %ref% no encontrado",
