--- a/Core/Translation/es_GT.json
+++ b/Core/Translation/es_GT.json
@@ -319,6 +319,9 @@
     "country": "País",
     "create": "Crear",
     "create-accounting-entry": "Crear Asiento Contable",
+    "create-delivery-note": "Crear envío",
+    "create-estimation": "Crear presupuesto",
+    "create-invoice": "Crear factura",
     "create-new-record": "Crear nuevo registro",
     "created": "Creado",
     "created-default-admin-account": "Se ha creado el usuario %nick% con la contraseña %pass%",
@@ -854,7 +857,7 @@
     "license": "Licencia",
     "like-than": "Igual que",
     "line": "Línea",
-    "lines": "Lineas",
+    "lines": "Líneas",
     "linux": "Linux",
     "list": "Lista",
     "load-def-acc-plan": "Cargar plan contable predeterminado",
@@ -1162,6 +1165,7 @@
     "printing-formats": "Formatos de impresión",
     "priority": "Prioridad",
     "private": "Privado",
+    "process": "Proceso",
     "processing": "Procesando",
     "product": "Producto",
     "product-not-found": "Producto %ref% no encontrado",
