--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -179,6 +179,7 @@
     "cancel": "Annuler",
     "cancel-data": "Annuler les modifications ou l'opération",
     "cancelled": "Annulé",
+    "cannot-generate-accounting-entry": "Error al generar el asiento de la factura %invoice%",
     "cant-assign-date-already-regularized": "Vous ne pouvez pas attribuer la date %date% car il y a déjà une régularisation de %tax% pour cette période.",
     "cant-assing-subaccount-supplier": "Impossible d'associer le sous-compte au fournisseur %supplierCode%",
     "cant-associate-customer-subaccount": "Impossible d'associer le sous-compte au client %customerCode%",
