--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -179,6 +179,7 @@
     "cancel": "Cancelar",
     "cancel-data": "Cancelar els canvis o l'operació",
     "cancelled": "Cancel·lat",
+    "cannot-generate-accounting-entry": "Error al generar el asiento de la factura %invoice%",
     "cant-assign-date-already-regularized": "No pots assignar la data %date% perque ya n'hi ha una regularisació %tax% per ad eixe periodo.",
     "cant-assing-subaccount-supplier": "No es pot associar el subconte per al proveïdor %supplierCode%",
     "cant-associate-customer-subaccount": "No es pot assignar el subconte per al client %customerCode%",
